[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/screen/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/GROBOLD.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/ui/NewGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/OptionsButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/ui/CreditButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/ui/PlayerAnimation.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sounds/bgm/caketown_1.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "hover"
length = 2.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -15.0, 15.0 ]
}

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.290196, 0.760784, 0.905882, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -120.0
margin_bottom = -80.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 1040.0
margin_bottom = 182.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.0196078, 0.458824, 0.627451, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 6
text = "Hello World!"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/TitleLabel"]
anims/hover = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 186.0
margin_right = 1040.0
margin_bottom = 374.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 1040.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewGameButton" parent="VBoxContainer/HBoxContainer/ButtonContainer" instance=ExtResource( 3 )]
margin_bottom = 60.0
scene_target = "res://src/screen/Game.tscn"

[node name="OptionsButton" parent="VBoxContainer/HBoxContainer/ButtonContainer" instance=ExtResource( 4 )]
margin_top = 64.0
margin_bottom = 124.0
scene_target = "res://src/screen/Options.tscn"

[node name="CreditButton" parent="VBoxContainer/HBoxContainer/ButtonContainer" instance=ExtResource( 5 )]
margin_top = 128.0
margin_bottom = 188.0
scene_target = "res://src/screen/Credit.tscn"

[node name="PlayerAnimation" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 6 )]
position = Vector2( 819.556, 155.601 )
scale = Vector2( 3, 3 )

[node name="VersionLabel" type="Label" parent="VBoxContainer"]
margin_top = 378.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = " v1.0"
valign = 2

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
